# serializer version: 1
# name: test_run_basic
  '''
  ✓ timer set off
  ┌─────┐
  │  1  │
  ├─────┤
  │   1 │
  └─────┘
  1 column × 1 row
  ┌─────┐
  │  2  │
  ├─────┤
  │   2 │
  └─────┘
  1 column × 1 row
  ┌─────┐
  │  3  │
  ├─────┤
  │   3 │
  └─────┘
  1 column × 1 row
  
  '''
# ---
# name: test_run_basic_dots
  '''
  ✓ timer set off
  ┌─────┐
  │  1  │
  ├─────┤
  │   1 │
  └─────┘
  1 column × 1 row
  yo
  yo2
  
  '''
# ---
# name: test_run_error[stderr]
  '''
  error[1]: SQL logic error
     ┌─ a.sql:11:3
     │
  11 │   substr(),
     │   ^^^^^^ wrong number of arguments to function substr()
  
  
  '''
# ---
# name: test_run_error[stdout]
  '''
  ✓ timer set off
  ┌───────┐
  │ world │
  ├───────┤
  │ hello │
  └───────┘
  1 column × 1 row
  ┌────────┐
  │ result │
  ├────────┤
  │      2 │
  └────────┘
  1 column × 1 row
  
  '''
# ---
